fixed practitioners not aligned at lower resolutions

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,13 @@ p {
     overflow: hidden;
 }
 
-#practitioners .list li {
-    padding: 10px 0;
+#practitioners .list .doctor {
     text-align: left;
+    min-width: 60px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+#practitioners .description {
+
 }
